# mafw-shared

./: COPYING  Makefile.am  autogen.sh  configure.ac  mafw-shared-uninstalled.pc.in  mafw-shared.pc.in
common/: Makefile.am  dbus-interface.h  mafw-dbus.c  mafw-dbus.h  mafw-util.c  mafw-util.h
debian/: changelog  control  copyright  libmafw-shared-doc.doc-base  libmafw-shared-doc.install  libmafw-shared0-dev.install  mafw-dbus-daemon.dirs  mafw-dbus-daemon.install  mafw-dbus-daemon.mafw.xsession  mafw-dbus-daemon.postinst  mafw-dbus-daemon.postrm  mafw-playlist-daemon.install  mafw.sh  rules
doc/: Makefile.am  built_in_plugins.sgml  creating_plugins.sgml  describing-mafw.sgml  examples.sgml  initializing-mafw.sgml  mafw-shared-docs.sgml  mafw-shared-sections.txt  mafw-shared.types  playlists.sgml  preface.sgml  renderers.sgml  sources.sgml
doc/examples/: mafw-browse-example.c  mafw-metadata-example.c  mafw-playlist-example.c  mafw-renderer-example.c
libmafw-shared/: Makefile.am  mafw-marshal.list  mafw-playlist-manager.c  mafw-playlist-manager.h  mafw-proxy-extension.c  mafw-proxy-extension.h  mafw-proxy-playlist.c  mafw-proxy-playlist.h  mafw-proxy-renderer.c  mafw-proxy-renderer.h  mafw-proxy-source.c  mafw-proxy-source.h  mafw-shared.c  mafw-shared.h
mafw-dbus-wrapper/: Makefile.am  extension-wrapper.c  main.c  mini-dbus-wrapper.c  renderer-wrapper.c  source-wrapper.c  wrapper.c  wrapper.h
mafw-playlist-daemon/: Makefile.am  aplaylist.c  com.nokia.mafw.playlist.service.in  mafw-playlist-daemon.c  mpd-internal.h  playlist-manager-wrapper.c  playlist-wrapper.c
tests/: Makefile.am  errorrenderer.c  errorrenderer.h  errorsource.c  errorsource.h  mockbus.c  mockbus.h  mockrenderer.c  mockrenderer.h  mocksource.c  mocksource.h  test-aplaylist.c  test-dbus-discover.c  test-dbus.c  test-playlist-manager-msg.c  test-playlist-manager.c  test-pld.c  test-plmngr-import.c  test-proxy-extension.c  test-proxy-playlist-msg.c  test-proxy-playlist.c  test-proxy-renderer.c  test-proxy-source.c  test-renderer-wrapper.c  test-source-wrapper.c  test-together.c  test-util.c  test.suppressions
